Name:           hope
Version:        0.0.1
License:        GPL
License-File:   COPYING
Author:         Angelos Charalambidis
Maintainer:     a.charalambidis@di.uoa.gr
Stability:      Experimental
Synopsis:       Higher Order Prolog with Extensionality
Description:    Not yet available
Category:       intepreter
Package-Url:    http://www.ajn.awmn.net/hope
Build-Depends:  array, pretty, base, haskell98, mtl, readline
Extra-Source-Files:
                Makefile

Executable:     hope
Main-Is:	Main.hs
Hs-Source-Dirs: src
                src/parser
                src/utils
                src/typecheck
                src/prover
Other-Modules:	Lexer, Parser, ParseUtils, Syntax
                Tc, Wellform, Typecheck, Restrict 
                Err
                Loc
                Pretty
                Hopl, Core, Logic, Infer
		Interactive
Extensions:     RankNTypes
		MultiParamTypeClasses
		FlexibleInstances
		TypeSynonymInstances
		FlexibleContexts
Ghc-Options:

