Name:           hope
Version:        0.0.5
License:        GPL
License-File:   LICENSE
Author:         Angelos Charalambidis
Maintainer:     a.charalambidis@di.uoa.gr
Stability:      Experimental
Synopsis:       Higher Order Prolog with Extensionality
Description:    Not yet available
Category:       intepreter
Package-Url:    http://www.ajn.awmn.net/hope
Build-Depends:  array, pretty, base, haskell98, mtl, readline
Extra-Source-Files:
                Makefile

Executable:     hope
Main-Is:	Main.hs
Hs-Source-Dirs: src
                src/basic
                src/parser
                src/checker
                src/prover
Other-Modules:	Lexer, Parser, ParseUtils,
                Syntax, Symbol, Types, Error, Loc
                Tc, WellForm, TypeCheck, Restrict 
                Pretty
                Hopl, Core, Logic, Infer
		Interactive
Extensions:     RankNTypes
		MultiParamTypeClasses
		FlexibleInstances
		TypeSynonymInstances
		FlexibleContexts
		FunctionalDependencies
Ghc-Options:    -O

