Cabal-Version:  >= 1.6 
Build-Type:	Simple
Name:           hopes
Version:        0.1.0
License:        GPL
License-File:   LICENSE
Author:         Angelos Charalambidis <a.charalambidis@di.uoa.gr>
Maintainer:     Angelos Charalambidis <a.charalambidis@di.uoa.gr>
Copyright:	2006-2011 Angelos Charalambidis
Stability:      Experimental
Synopsis:       Higher Order Prolog with Extensional Semantics
Description:
	Hopes is a prototype interpreter for a subset of Higher Order Logic
	used as Programming Language.
Category:       Compilers/Interpreters
Tested-With:	GHC==6.8.2
Extra-Source-Files:
                pl/examples/*.pl
                Makefile
		README
                AUTHORS
                COPYING
Bug-Reports:	https://github.com/acharal/hopes/issues
Homepage:	https://github.com/acharal/hopes

Source-Repository head
  type:		git
  location:	https://github.com/acharal/hopes.git

Flag split-base
  Description:    Choose the new, split-up base package.

Flag dc-impl
  Description:    Choose the alternative implementation of prover using delimited continuations
  Default: False

Flag poly
  Description:    Choose the polyHopes frontend
  Default: False

Executable      hopes
  Main-Is:	  Main.hs
  Build-Depends:  mtl >= 2.2.1, haskeline, monad-coroutine
  if flag(split-base)
    Build-Depends: base >= 3.0 && < 5, array, pretty
  else
    Build-Depends: haskell98, base < 3.0

  if flag(poly)
    Build-Depends: parsec >= 3.0, containers >= 0.5

  if flag(dc-impl)
    Build-Depends: CC-delcont-cxe
    CPP-Options: -DDCIMPL

  if os(windows)
    CPP-Options: -DBUILD_WINDOWS

  Hs-Source-Dirs: src/basic
                  src/prover
                  src/interpreter
  if flag(poly)
    Hs-Source-Dirs: src/poly
  else
    Hs-Source-Dirs: src/frontend

  if !flag(poly)
    Other-Modules: Parser 
 
  Extensions:     RankNTypes
                  MultiParamTypeClasses
                  FlexibleInstances
                  FlexibleContexts
                  TypeSynonymInstances
                  FlexibleContexts
                  FunctionalDependencies
                  CPP
                  UndecidableInstances
                  NoMonomorphismRestriction

 if flag(poly)
   Extensions: StandaloneDeriving
               DeriveFunctor
